--- a/views/mods.pug
+++ b/views/mods.pug
@@ -14,7 +14,11 @@ block content
             img(src=cdn+'/upstander.png')
           .content
             .header="How to Be an Upstander"
-            
+        a.ui.card(href=`/hello/cyberbullying`)
+          .image
+            img(src=cdn+'/upstander.png')
+          .content
+            .header="New_modulesr"
         
             
        
