--- a/views/new_module/new_module.pug
+++ b/views/new_module/new_module.pug
@@ -2,29 +2,31 @@
 extends ../ui_layout
 
 block content
-
+  -var user_post = []
+  -var user_info = [{profile_pic : "/profile_pictures/power_woman.jpg",background_pic : "/profile_pictures/chloe4.jpg",user_name : "power_to_women_",user_id : "",bio : "American Feminist",location : "She needed a hero, so that's what she became!",join_date : "June 2019"}]
+  -user_post.push({post_id:0,post_pic:"/profile_pictures/power_women_post1.jpg",post_content:"Share this 'violent or graphic' photo everywhere and tell Zuckerberg to such it!",post_date:"May 23, 2020"})
+  -user_post.push({post_id:1,post_pic:"/profile_pictures/power_women_post2.jpg",post_content:"",post_date:"May 23, 2020"})
   -var cdn = "https://dhpd030vnpk29.cloudfront.net";
-  
     //-####################### title
     .ui.fluid.card.dim(style = "margin-bottom:0px")
       .profile_title(style='position: relative; top: 0; left: 0; ')
        img(style='width:100%; z-index: 0;position: relative;\
   top: 0;\
   left: 0;\
-  solid; z-index = -1' src='/profile_pictures/Z-backgoundAndres.jpg')
+  solid; z-index = -1' src=user_info[0].background_pic)
        img(style='border-radius: 50%; width:30%; z-index: 2; position: absolute;\
   top: 55%;\
   left: 3%;\
-  border: 4px white solid;z-index: 1' src='/profile_pictures/user81.jpg')
+  border: 4px white solid;z-index: 1' src=user_info[0].profile_pic)
       .bio(style=' width:100%;\
  padding-left: 25px; margin-top: 4%;z-index: 1')
           .ui.button(style='float: right;margin-right: 25px;')
               | follow
-          .br  Harmony Anderson 
-          .br  @HarmonyAnders
-          .br  The college girl who managed to stay conservative #prolife #pro2A #AmericaFirst This is my 2nd account where I share my political and social views
-          .br  Ankeny, Iowa
-          .br Joined September 2019
+          .br !{user_info[0].user_name}
+          .br  !{user_info[0].user_id}
+          .br !{user_info[0].bio}
+          .br  !{user_info[0].location}
+          .br Joined !{user_info[0].join_date}
       .three.ui.bottom.attached.icon.buttons
         .ui.reply.button(tabindex='0')
           | Tweets
@@ -33,7 +35,9 @@ block content
         .ui.labeled.button(tabindex='0')
           .ui.like.button
             | Likes
-    //-####################### first
+    //-####################### post
+  if user_post.length !=0
+   each val in Array.from(Array(user_post.length).keys())
     .ui.fluid.card.dim(style ="margin-top:0px;margin-bottom:0px")
       .ui.dimmer.flag
         .content
@@ -46,20 +50,16 @@ block content
                   | The admins will review this post further. We are sorry you 
                   | had this experience.
       .content
-        .right.floated.meta= "Yesterday"
+        .right.floated.meta= user_post[val].post_date
         a(href='#')
-              img.ui.avatar.image(src='/profile_pictures/user81.jpg')
-              span='Harmony Anderson'
-              .br &nbsp  &nbsp &nbsp &nbsp &nbsp @HarmonyAnders
+              img.ui.avatar.image(src=user_info[0].profile_pic)
+              span=user_info[0].user_name
+              .br &nbsp  &nbsp &nbsp &nbsp &nbsp !{user_id}
       .content
         .description 
-          .br Pennsylvania voter rolls near Pittsburgh are full of inaccuracies:
-          .br —1,583 dead people registered to vote
-          .br —7,500 flagged as duplicate voters
-          .br —Nearly 50 born in the 1800s 2020 runs through Pennsylvania RT for national voter ID NOW!
-          .br 🇺🇸🇺🇸Trump2020
+          .br !{user_post[val].post_content}
       .img.post
-        img(src='/profile_pictures/Z-video.jpg',style=' width:100%;')
+        img(src=user_post[val].post_pic,style=' width:100%;')
       .three.ui.bottom.attached.icon.buttons
         .ui.reply.button(tabindex='0')
           i.reply.icon
@@ -72,90 +72,11 @@ block content
             i.heart.icon
             | Like
           a.ui.basic.red.left.pointing.label.count 2
-      .content
-        .ui.comments
-          .comment
-            a.avatar
-              img(src=cdn+'/profile_pictures/user43.jpg')
-            .content
-              a.author Susan Turner
-              .metadata
-                span.date Yesterday
-                .rating
-                  i.heart.icon
-                  span.num 1
-                  |  Likes
-              .text I agree.
-              .actions
-                a.like.comment Like
-                a.flag.comment Flag
-                a#hint3
       .extra.content
         .ui.fluid.left.labeled.right.icon.input
           .ui.label
             img.ui.avatar.image(src=cdn+'/profile_pictures/'+user.profile.picture, name=user.profile.name)
           input.newcomment#hint4(type='text' placeholder='Write a Comment')
           i.big.send.link.icon
-
-    //-####################### second
-    .ui.fluid.card.dim(style ="margin-top:0px;margin-bottom:0px")
-      .ui.dimmer.flag
-        .content
-          .center
-            h2.ui.inverted.icon.header
-              i.red.flag.icon
-              | You&apos;ve flagged this!
-              h3.ui.inverted.header
-                span 
-                  | The admins will review this post further. We are sorry you 
-                  | had this experience.
-      .content
-        .right.floated.meta= "Yesterday"
-        a(href='#')
-              img.ui.avatar.image(src='/profile_pictures/user81.jpg')
-              span='Harmony Anderson'
-              .br &nbsp  &nbsp &nbsp &nbsp &nbsp @HarmonyAnders
-      .content
-        .description 
-          .br Thank you Sarvodaya School for welcoming me with the lovely Tilak & Aarti tradition!
-      .img.post
-        img(src='/profile_pictures/Z-twtter.jpg')
-      .three.ui.bottom.attached.icon.buttons
-        .ui.reply.button(tabindex='0')
-          i.reply.icon
-          | Reply
-        .ui.flag.button()
-          i.flag.icon
-          | Flag
-        .ui.labeled.button(tabindex='0')
-          .ui.like.button
-            i.heart.icon
-            | Like
-          a.ui.basic.red.left.pointing.label.count 2
-      .content
-        .ui.comments
-          .comment
-            a.avatar
-              img(src=cdn+'/profile_pictures/user43.jpg')
-            .content
-              a.author Susan Turner
-              .metadata
-                span.date Yesterday
-                .rating
-                  i.heart.icon
-                  span.num 1
-                  |  Likes
-              .text I agree.
-              .actions
-                a.like.comment Like
-                a.flag.comment Flag
-                a#hint3
-      .extra.content
-        .ui.fluid.left.labeled.right.icon.input
-          .ui.label
-            img.ui.avatar.image(src=cdn+'/profile_pictures/'+user.profile.picture, name=user.profile.name)
-          input.newcomment#hint4(type='text' placeholder='Write a Comment')
-          i.big.send.link.icon
-
 block scripts
   script(src='/postFunctionalities.js')
