add navbar for switching diff profile

--- a/views/mods.pug
+++ b/views/mods.pug
@@ -14,11 +14,11 @@ block content
             img(src=cdn+'/upstander.png')
           .content
             .header="How to Be an Upstander"
-        a.ui.card(href=`/hello/cyberbullying`)
+        a.ui.card(href=`/power_to_women/spot_the_troll`)
           .image
             img(src=cdn+'/upstander.png')
           .content
-            .header="New_modulesr"
+            .header="spot_the_troll"
         
             
        
