--- a/views/spot_the_troll/power_women.pug
+++ b/views/spot_the_troll/power_women.pug
@@ -7,14 +7,24 @@ block content
   -user_post.push({post_id:0,post_pic:"/profile_pictures/power_women_post1.jpg",post_content:"Share this 'violent or graphic' photo everywhere and tell Zuckerberg to such it!",post_date:"May 23, 2020"})
   -user_post.push({post_id:1,post_pic:"/profile_pictures/power_women_post2.jpg",post_content:"",post_date:"May 23, 2020"})
   -var cdn = "https://dhpd030vnpk29.cloudfront.net";
+    //-####################### navbar
+    .topnav(style='width:100%')
+      a.active(href='javascript:void(0);' onclick='myFunction()') H
+      #myLinks
+        a(href='/Christopher/spot_the_troll') Christopher
+        a(href='/power_to_women/spot_the_troll') power_to_women
+        a(href='/HarmonyAnderson/spot_the_troll') HarmonyAnderson
+        a(href='/ChloeEvan/spot_the_troll') ChloeEvan
+      a.icon(href='javascript:void(0);' onclick='myFunction()') 
+        i.fa.fa-bars  &nbsp   &nbsp  Switch Twitter Profile
     //-####################### title
     .ui.fluid.card.dim(style = "margin-bottom:0px")
       .profile_title(style='position: relative; top: 0; left: 0; ')
-       img(style='width:100%; z-index: 0;position: relative;\
+       img(style='width:100%; height:400px; z-index: 0;position: relative;\
   top: 0;\
   left: 0;\
   solid; z-index = -1' src=user_info[0].background_pic)
-       img(style='border-radius: 50%; width:30%; z-index: 2; position: absolute;\
+       img(style='border-radius: 50%;width:20%; z-index: 2; position: absolute;\
   top: 55%;\
   left: 3%;\
   border: 4px white solid;z-index: 1' src=user_info[0].profile_pic)
@@ -80,3 +90,8 @@ block content
           i.big.send.link.icon
 block scripts
   script(src='/postFunctionalities.js')
+  script(src='/NavBar.js')
+  link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css')
+
+block styles
+  link(rel='stylesheet', href = '/css/NavBar/NavBar.css')
