--- a/views/spot_the_troll/power_women.pug
+++ b/views/spot_the_troll/power_women.pug
@@ -18,7 +18,7 @@ block content
       a.icon(href='javascript:void(0);' onclick='myFunction()') 
         i.fa.fa-bars  &nbsp   &nbsp  Switch Twitter Profile
     //-####################### title
-    .ui.fluid.card.dim(style = "margin-bottom:0px")
+    .ui.fluid.card.dim(style = "margin-top:0px;margin-bottom:0px")
       .profile_title(style='position: relative; top: 0; left: 0; ')
        img(style='width:100%; height:400px; z-index: 0;position: relative;\
   top: 0;\
