--- a/public2/css/NavBar/NavBar.css
+++ b/public2/css/NavBar/NavBar.css
@@ -1,7 +1,7 @@
     /* Style the navigation menu */
     .topnav {
         overflow: hidden;
-        background-color: red;
+        background-color: black;
         position: relative;
         }
         /* Hide the links inside the navigation menu (except for logo/home) */
