--- a/views/spot_the_troll/Christopher.pug
+++ b/views/spot_the_troll/Christopher.pug
@@ -29,17 +29,16 @@ block content
     //-####################### title
     .ui.fluid.card.dim(style = "margin-top:0px;margin-bottom:0px")
       .profile_title(style='position: relative; top: 0; left: 0; ')
-       img(style='width:100%; height:400px;z-index: 0;position: relative;\
+       img(style='width:100%;height:80%; z-index: 0;position: relative;\
   top: 0;\
   left: 0;\
   solid; z-index = -1' src=background_pic)
        img(style='border-radius: 50%; width:20%; z-index: 2; position: absolute;\
-  top: 55%;\
+  top: 67%;\
   left: 3%;\
   border: 4px white solid;z-index: 1' src=profile_pic)
-      .bio(style=' width:100%;\
- padding-left: 25px; margin-top: 4%;z-index: 1')
-          .ui.button(style='float: right;margin-right: 25px;')
+      .bio(style=' width:100%;padding-left: 25px; margin-top: 0%;z-index: 1')
+          .ui.button(style='margin-top: 0%;float: right;margin-right: 25px;')
               | follow
           .br !{user_name}
           .br  !{user_id}
