add tutorial to one of the profile page and friend req

--- a/views/spot_the_troll/HarmonyAnderson.pug
+++ b/views/spot_the_troll/HarmonyAnderson.pug
@@ -176,6 +176,8 @@ block scripts
   .style 
   script(src="/module_js/spot_the_troll/spot_the_troll_tur.js")
   script(src="/module_js/base_introSteps.js")
+  script(src="/module_js/voiceover.js")
+  script(src='/module_js/base_tutorial.js')
   .script 
   
 block styles
