--- a/views/spot_the_troll/Saeed_Ahmed.pug
+++ b/views/spot_the_troll/Saeed_Ahmed.pug
@@ -1,46 +1,41 @@
+
 extends ../ui_layout
 
 block content
-
+  -var user_post = []
+  -var user_info = [{profile_pic : "/profile_pictures/LDAzIrVA_400x400.jpg",background_pic : "/profile_pictures/1500x500_background.jpg",user_name : "Saeed Ahmed",user_id : "@SaeedAhmed",bio : "Head of digital journalism US @BBC | Ex @NPR @CNN @AJC | Loves:🏃🏾‍♂️🎸📸📚| 🇧🇩🇺🇸| Here to help underrepresented journos: http://calendly.com/ahmed_saeed | he/him",location : "Dhaka-Abu Dhabi-ATL-DC",join_date : "January 2009"}]
+  -user_post.push({post_id:0,post_pic:"/profile_pictures/FiwPsA7XwAEm0TN.jpg",post_content:"If you’re at work and can’t sneak a peak at the #WorldCup2022 games, know that we are live-blogging both #USAvIRN and #ENG v #WAL   Come hang out with us at http://bbc.com",post_date:"Nov 29, 2022"})
+  -user_post.push({post_id:1,post_pic:"/profile_pictures/FhDDo7jWAAAtDZB.jpg",post_content:"It’s #ElectionDay2022",post_date:"Nov 8, 2022"})
   -var cdn = "https://dhpd030vnpk29.cloudfront.net";
-    //-####################### navbar
-    //-.topnav(style='width:100%')
-      a.active(href='javascript:void(0);' onclick='myFunction()') H
-      #myLinks
-        a(href='/Christopher/spot_the_troll') Christopher
-        a(href='/power_to_women/spot_the_troll') power_to_women
-        a(href='/HarmonyAnderson/spot_the_troll') HarmonyAnderson
-        a(href='/ChloeEvan/spot_the_troll') ChloeEvan
-      a.icon(href='javascript:void(0);' onclick='myFunction()') 
-        i.fa.fa-bars  &nbsp   &nbsp  Switch Twitter Profile*/
     //-####################### title
     .ui.fluid.card.dim(style = "margin-top:0px;margin-bottom:0px")
       .profile_title(style='position: relative; top: 0; left: 0; ')
        img(style='width:100%;height:80%; z-index: 0;position: relative;\
   top: 0;\
   left: 0;\
-  solid; z-index = -1' src='/profile_pictures/Z-backgoundAndres.jpg')
+  solid; z-index = -1' src=user_info[0].background_pic)
        img(style='border-radius: 50%; width:20%; z-index: 2; position: absolute;\
-  top: 65%;\
+  top: 50%;\
   left: 3%;\
-  border: 4px white solid;z-index: 1' src='/profile_pictures/user81.jpg')
+  border: 4px white solid;padding: -1px;padding: 5px white solid;z-index: 1' src=user_info[0].profile_pic)
       .bio(style=' width:100%;padding-left: 25px; margin-top: 0%;z-index: 1')
           button.ui.secondary.button(style='margin-top: 0%;float: right;margin-right: 25px;')
               | follow
-          .br  Harmony Anderson 
-          .br  @HarmonyAnders
-          .br  The college girl who managed to stay conservative #prolife #pro2A #AmericaFirst 
-          .br This is my 2nd account where I share my political and social views
-          .br  Ankeny, Iowa
-          .br Joined September 2019
+          <p> </p>
+          <br/>
+          .br !{user_info[0].user_name}
+          .br  !{user_info[0].user_id}
+          .br !{user_info[0].bio}
+          .br  !{user_info[0].location}
+          .br Joined !{user_info[0].join_date}
       .btn-group
           button(style=' width: 25%;') Tweets
           button(style=' width: 25%;') Replies
           button(style=' width: 25%;') Media          
           button(style=' width: 25%;') Likes
-
-    //-####################### first
-    
+    //-####################### post
+  if user_post.length !=0
+   each val in Array.from(Array(user_post.length).keys())
     .ui.fluid.card.dim(style ="margin-top:0px;margin-bottom:0px")
       .ui.dimmer.flag
         .content
@@ -53,20 +48,16 @@ block content
                   | The admins will review this post further. We are sorry you 
                   | had this experience.
       .content
-        .right.floated.meta= "Yesterday"
+        .right.floated.meta= user_post[val].post_date
         a(href='#')
-              img.ui.avatar.image(src='/profile_pictures/user81.jpg')
-              span='Harmony Anderson'
-              .br &nbsp  &nbsp &nbsp &nbsp &nbsp @HarmonyAnders
-      a.content
-         .description 
-          .br Pennsylvania voter rolls near Pittsburgh are full of inaccuracies:
-          .br —1,583 dead people registered to vote
-          .br —7,500 flagged as duplicate voters
-          .br —Nearly 50 born in the 1800s 2020 runs through Pennsylvania RT for national voter ID NOW!
-          .br 🇺🇸🇺🇸Trump2020
+              img.ui.avatar.image(src=user_info[0].profile_pic)
+              span=user_info[0].user_name
+              .br &nbsp  &nbsp &nbsp &nbsp &nbsp !{user_info[0].user_id}
+      .content
+        .description 
+          .br !{user_post[val].post_content}
       .img.post
-        img(src='/profile_pictures/Z-video.jpg',style=' width:100%;')
+        img(src=user_post[val].post_pic,style=' width:100%;')
         .ui.reply.black.basic.button(tabindex='0',style=' margin-left:5px; width:32%')
           i.comment.outline.icon
           | Reply
@@ -78,106 +69,27 @@ block content
             i.heart.outline.icon
             | Like
           a.ui.basic.red.left.pointing.label.count 2
-      .content
-        .ui.comments
-          .comment
-            a.avatar
-              img(src=cdn+'/profile_pictures/user43.jpg')
-            .content
-              a.author Susan Turner
-              .metadata
-                span.date Yesterday
-                .rating
-                  i.heart.outline.icon
-                  span.num 1
-                  |  Likes
-              .text I agree.
-              .actions
-                a.like.comment Like
-                a.flag.comment Flag
-                a#hint3
       .extra.content
         .ui.fluid.left.labeled.right.icon.input
           .ui.label
             img.ui.avatar.image(src=cdn+'/profile_pictures/'+user.profile.picture, name=user.profile.name)
           input.newcomment#hint4(type='text' placeholder='Write a Comment')
           i.big.send.link.icon
-
-    //-####################### second
-    .ui.fluid.card.dim(style ="margin-top:0px;margin-bottom:0px")
-      .ui.dimmer.flag
-        .content
-          .center
-            h2.ui.inverted.icon.header
-              i.red.flag.icon
-              | You&apos;ve flagged this!
-              h3.ui.inverted.header
-                span 
-                  | The admins will review this post further. We are sorry you 
-                  | had this experience.
-      .content
-        .right.floated.meta= "Yesterday"
-        a(href='#')
-              img.ui.avatar.image(src='/profile_pictures/user81.jpg')
-              span='Harmony Anderson' 
-              .h &nbsp  &nbsp &nbsp &nbsp &nbsp @HarmonyAnders
-      .content
-        .description 
-          .br Thank you Sarvodaya School for welcoming me with the lovely Tilak & Aarti tradition!
-      .img.post
-        img(src='/profile_pictures/Z-twtter.jpg' style=' width:100%;')
-        .ui.reply.black.basic.button(tabindex='0',style='margin-left:5px; width:32%')
-          i.comment.outline.icon
-          | Reply
-        .ui.flag.black.basic.button(style=' width:32%;')
-          i.flag.outline.icon
-          | Flag
-        .ui.labeled.button(tabindex='0',style='width:32%;')
-          .ui.like.black.basic.button(style=' width:100%;')
-            i.heart.outline.icon
-            | Like
-          a.ui.basic.red.left.pointing.label.count 2
-      .content
-        .ui.comments
-          .comment
-            a.avatar
-              img(src=cdn+'/profile_pictures/user43.jpg')
-            .content
-              a.author Susan Turner
-              .metadata
-                span.date Yesterday
-                .rating
-                  i.heart.outline.icon
-                  span.num 1
-                  |  Likes
-              .text I agree.
-              .actions
-                a.like.comment Like
-                a.flag.comment Flag
-                a#hint3
-      .extra.content
-        .ui.fluid.left.labeled.right.icon.input
-          .ui.label
-            img.ui.avatar.image(src=cdn+'/profile_pictures/'+user.profile.picture, name=user.profile.name)
-          input.newcomment#hint4(type='text' placeholder='Write a Comment')
-          i.big.send.link.icon
-
-
-    #myModal_.modal
+  #myModal_.modal
       .modal-content
             .ui.centered.cards
               .card
                 .content
-                  img.right.floated.medium.ui.image(style='border-radius: 50%;' src='/profile_pictures/user81.jpg')
+                  img.right.floated.medium.ui.image(style='border-radius: 50%;' src='/profile_pictures/LDAzIrVA_400x400.jpg')
                   .header
-                    | Harmony Anderson
+                    | Saeed Ahmed
                   .meta
                     | 0 mutual friends
                   .description
-                   | Harmony has requested to be your friend
+                   | Saeed Ahmed has requested to be your friend
                   .extra.content      
-                    .ui.basic.green.button(style=' width: 32%;' onclick = "window.location.href= '/Saeed_Ahmed/spot_the_troll'") Accept
-                    .ui.red.button(style=' width: 32%;' onclick = "window.location.href= '/Saeed_Ahmed/spot_the_troll'") Decline
+                    .ui.green.button(style=' width: 32%;' onclick = "window.location.href= '/Saeed_Ahmed/spot_the_troll'") Accept
+                    .ui.basic.red.button(style=' width: 32%;' onclick = "window.location.href= '/Saeed_Ahmed/spot_the_troll'") Decline
                     .ui.outline.button(style=' width:32%;' onclick='unhide_()') Report
                     .exp1
                       p 
@@ -186,13 +98,12 @@ block content
                         input(type='text', name='title', value='')
                       .ui.button(style = "width:29%;margin:2px",type='submit', value='Submit' onclick="window.location.href= '/Saeed_Ahmed/spot_the_troll'") Submit
     
-    .ui.blue.button#myBtn(style = "" ) Next
+  .ui.blue.button#myBtn(style = "" ) Next
+  .ui.blue.button#myBtn(style = "" onclick = "window.location.href= '/HarmonyAnderson/spot_the_troll'") Back
 block scripts
   script(src='/postFunctionalities.js')
   script(src='/NavBar.js')
   link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css')
-  .style 
-    link(rel='stylesheet' href='https://www.w3schools.com/w3css/4/w3.css')
   style.
     .exp{visibility: hidden;}
     .exp1{visibility: hidden;}
@@ -249,10 +160,6 @@ block scripts
     .btn-group button:hover {
     background-color: #f0f2f1;
     } 
-  //-#script(src="/module_js/spot_the_troll/spot_the_troll_tur.js")
-  //-#script(src="/module_js/base_introSteps.js")
-  //-#script(src="/module_js/voiceover.js")
-  //-#script(src='/module_js/base_tutorial.js')
   .script 
   script.
     function unhide() {
@@ -303,6 +210,6 @@ block scripts
     }, 50);
     }; 
     */
-
 block styles
   link(rel='stylesheet', href = '/css/NavBar/NavBar.css')
+  
