--- a/views/spot_the_troll/HarmonyAnderson.pug
+++ b/views/spot_the_troll/HarmonyAnderson.pug
@@ -181,22 +181,13 @@ block content
                     .ui.red.button(style=' width: 32%;' onclick = "window.location.href= '/Saeed_Ahmed/spot_the_troll'") Decline
                     .ui.outline.button(style=' width:32%;' onclick='unhide_()') Report
                   .exp1
-                    .btn-group2(style = "position:absolute;top: 6%; z-index: 1;width:91%")
-                       button(onclick='unhide()' style = "text-align:left;font-family: 'Lucida Console', 'Courier New', monospace;") It's a spam
-                       button(onclick='unhide()' style = "text-align:left;font-family: 'Lucida Console', 'Courier New', monospace;")  Nudity or sexual activity
-                       button(onclick='unhide()' style = "text-align:left;font-family: 'Lucida Console', 'Courier New', monospace;") Hate speech or symbols
-                       button(onclick='unhide()' style = "text-align:left;font-family: 'Lucida Console', 'Courier New', monospace;") False information
-                       button(onclick='unhide()' style = "text-align:left;font-family: 'Lucida Console', 'Courier New', monospace;") I just don't like it
-                       button(onclick='unhide()' style = "text-align:left;font-family: 'Lucida Console', 'Courier New', monospace;") Bullying or harassment
-                       button(onclick='unhide()' style = "text-align:left;font-family: 'Lucida Console', 'Courier New', monospace;") Scam or fraud
-                       button(onclick='unhide()' style = "text-align:left;font-family: 'Lucida Console', 'Courier New', monospace;") Violance
-                       button(onclick='unhide()' style = "text-align:left;font-family: 'Lucida Console', 'Courier New', monospace;") Terrorism
-                       button(onclick='unhide()' style = "text-align:left;font-family: 'Lucida Console', 'Courier New', monospace;") Suicide or self-injury
-                       button(onclick='unhide()' style = "text-align:left;font-family: 'Lucida Console', 'Courier New', monospace;") Unauthorized sales
-                       button(onclick='unhide()' style = "text-align:left;font-family: 'Lucida Console', 'Courier New', monospace;") Child Abuse   
-                       button(onclick = "window.location.href= '/Saeed_Ahmed/spot_the_troll'" style = "text-align:left;font-family: 'Lucida Console', 'Courier New', monospace;") Nah... Let's go next.
-                    p(style = "position:absolute;font-weight:bold;top: 2%; z-index: 1;font-family: 'Arial', 'Helvetica', sans-serif;")
-                      | why are you reporting this post?
+                    .btn-group2(style = "position:absolute;top: 30%; z-index: 1;width:91%")
+                       button(onclick='unhide()' style = "text-align:left;font-family: 'Chirp', 'sans-serif'") It's a spam
+                       button(onclick='unhide()' style = "text-align:left;font-family: 'Chirp', 'sans-serif'") False information
+                       button(onclick='unhide()' style = "text-align:left;font-family: 'Chirp', 'sans-serif';") Scam or fraud 
+                       button(onclick = "window.location.href= '/Saeed_Ahmed/spot_the_troll'" style = "text-align:left;font-family: 'ChirpExtended', 'sans-serif") Misclicked... Let's go next.
+                    p(style = "position:absolute;font-weight:bold;top: 20%; z-index: 1;font-family: 'Arial', 'Helvetica', sans-serif;")
+                      | Why are you reporting this account?
                     .p 
                       | &nbsp
                   .exp2
